EFTI-975 : replace common test library with custom code and fixed some sonar issues